# sequana

./: .coveragerc  .coveragerc_travis  .gitignore  .readthedocs.yml  .readthedocs_extra.txt  .travis.yml  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.dev  README.rst  environment.yml  environment_rtd.yml  kegg_demo.html  output.dmp  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_pipelines.txt  requirements_pipelines_extra.txt  requirements_rtd.txt  setup.cfg  setup.py
.github/: copilot-instructions.md  pipeline_template.md  rnaseq.md
.github/ISSUE_TEMPLATE/: bug_report.md  general.md  new_features.md  rnaseq-pipeline.md
.github/workflow/: main.yml
.github/workflows/: main.yml  pypi.yml
doc/: Changelog.rst  Changelog.txt  applications.rst  case_example_trimming_snp.rst  conf.py  developers.rst  faqs.rst  index.rst  installation.rst  pipeline_coverage.rst  pipeline_demultiplex.rst  pipeline_denovo_assembly.rst  pipeline_fastqc.rst  pipeline_mapper.rst  pipeline_pacbio_qc.rst  pipeline_quality_control.rst  pipeline_ribofinder.rst  pipeline_rnaseq.rst  pipeline_variant_calling.rst  pipeline_vc.rst  pipelines.rst  references.rst  references_enrich.rst  references_stats.rst  references_viz.rst  requirements.txt  rules.rst  sequanix.rst  tutorial.rst  userguide.rst  wrappers.rst
docker/: README.rst  README_book_keeping.rst
docker/sequana/: Dockerfile  README.rst  push.sh
docker/sequana_conda_core/: README.rst  push.sh  sequana_install.sh
docker/sequana_conda_ngs/: README.rst  push.sh  sequana_install.sh
docker/sequana_core/: README.rst  push.sh  sequana_install.sh
docker/sequana_coverage/: README.rst  push.sh
docker/sequana_taxonomy/: README.rst  push.sh
examples/: plot_bam.py  plot_coverage.py  plot_fastqc_hist.py  plot_kraken.py  plot_pipeline_stats.py  plot_qc_pacbio.py  plot_running_median.py
notebooks/: fastq_module.ipynb  featurecounts.ipynb  ribodesigner.ipynb
notebooks/viz/: anova.ipynb  corrplot.ipynb  heatmap.ipynb  hist2d.ipynb  imshow.ipynb  scatter.ipynb  volcano.ipynb
sequana/: G4hunter.py  __init__.py  adapters.py  annotation.py  annotations.py  assembly.py  bamtools.py  bed.py  bedtools.py  biomart.py  biomol.py  blast.py  busco.py  canu_scanner.py  checkm.py  chipseq.py  cigar.py  cnv.py  codon.py  compare.py  contigs.py  coverage.py  cpg_islands.py  criteria.py  cruciforms.py  databases.py  datatools.py  demultiplex.py  enrichment.py  errors.py  expdesign.py  fasta.py  fasta_gff_correction.py  fastq.py  fastq_splitter.py  fastqc.py  featurecounts.py  find_motif.py  freebayes_bcf_filter.py  freebayes_vcf_filter.py  (+64 more)
sequana/codecs/: embl_to_fasta.py
sequana/cython/: g4hunter.pyx  setup.py
sequana/enrichment/: __init__.py  gsea.py  kegg.py  mart.py  ontology.py  panther.py  plot_go_terms.py  quickgo.py  uniprot_enrichment.py
sequana/gui/: browser.py  sequana_gui.py  snakemake.py  tools.py  ui_mainwindow.py  widgets.py
sequana/kraken/: analysis.py  consensus.py  downloads.py  multikraken.py  sequential.py
sequana/modules_report/: __init__.py  bamqc.py  base_module.py  bwa_bam_to_fastq.py  coverage.py  cutadapt.py  enrichment.py  fastq_stats.py  fastqc.py  joint_calling.py  kegg_enrichment.py  kraken.py  multi_summary.py  pacbio_input_bam.py  panther_enrichment.py  phix.py  quast.py  rnadiff.py  summary.py  trf.py  uniprot_enrichment.py  variant_calling.py
sequana/multiqc/: __init__.py  bamtools_stats.py  config.py  coverage.py  isoseq.py  isoseq_qc.py  kraken.py  laa.py  multiqc_config.yaml  pacbio_amplicon.py  pacbio_qc.py  pairtools.py  plots.py  quality_control.py
sequana/pipelines/: config.yaml
sequana/plots/: canvasjs_base.py  canvasjs_linegraph.py
sequana/rules/: README.rst
sequana/scripts/: backspace_fusion.py  bam_splitter.py  browser.py  common.py  compressor.py  coverage.py  fastq_head.py  fastq_summary.py  gtf_fixer.py  lane_merging.py  main.py  start_pipeline.py  substractor.py  summary.py  taxonomy.py  tools.py  utils.py  vcf_filter.py
sequana/sphinxext/: sequana_pipeline.py  snakemakerule.py
sequana/utils/: checker.py  config.py  datatables_js.py  df2html.py  fisher.py  pandas.py  singleton.py  tree.py
sequana/viz/: __init__.py  anova.py  bar.py  boxplot.py  clusterisation.py  core.py  corrplot.py  dendogram.py  dotplot.py  heatmap.py  hinton.py  hist2d.py  ideogram.py  imshow.py  isomap.py  linkage.py  mds.py  pca.py  plotly.py  scatter.py  tsne.py  venn.py  vizir.py  volcano.py
singularity/: README.rst  Singularity.0_8_0  Singularity.tools  Singularity.ubuntu  Singularity_tools
singularity/sequana_tools/: Singularity.sequana_tools
singularity/ubuntu/: Makefile  Singularity.ubuntu_light
test/: conftest.py  test_G4hunter.py  test_annotation.py  test_assembly.py  test_bamtools.py  test_bed.py  test_bedtools.py  test_biomol.py  test_blast.py  test_canvas.py  test_canvasjs_linegraph.py  test_cigar.py  test_cnv.py  test_codon.py  test_compare.py  test_contigs.py  test_coverage.py  test_cpg_islands.py  test_criteria.py  test_cruciforms.py  test_databases.py  test_datatables.py  test_datatools.py  test_demultiplex.py  test_df2html.py  test_enrichment.py  test_errors.py  test_fasta.py  test_fasta_gff_correction.py  test_fasta_gff_correction_complete.py  test_fastq.py  test_fastq_splitter.py  test_fastqc.py  test_featurecounts.py  test_find_motif.py  test_freebayes_bcf_filter.py  test_freebayes_vcf_filter.py  test_frip.py  test_g4hunter.py  test_genbank.py  (+54 more)
test/data/: aragorn.txt  ecoli_truncated.gff  hg38_truncated_gtf.gff  mm10_truncated.gff  names_filtered.dmp  nodes_filtered.dmp  saccer3_truncated.gff  test_small.gff3
test/enrichment/: test_gsea.py  test_kegg.py  test_mart.py  test_panther.py  test_quickgo.py  test_uniprot_enrichment.py
test/gui/: test_file_browser.py  test_preferences.py  test_sequana_gui.py
test/kraken/: test_analysis.py  test_downloads.py  test_multikraken.py
test/modules_report/: test_coverage_module.py  test_cutadapt.py  test_fastqc.py  test_multi_summary.py  test_pacbio.py  test_report_fastq_stats.py  test_summary_module.py  (+1 more)
test/viz/: test_mds.py  (+16 more)
(+584 files in other folders)
