[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "sequana"
version = "0.16.7"
description = "A set of standalone application and pipelines dedicated to NGS analysis"
authors = ["Thomas Cokelaer <thomas.cokelaer@pasteur.fr>"]
license = "new BSD"
readme = ["README.rst", "LICENSE"]
keywords = ["snakemake", "sequana", "NGS"]
classifiers = [
        "Development Status :: 5 - Production/Stable",
        "Intended Audience :: Education",
        "Intended Audience :: End Users/Desktop",
        "Intended Audience :: Developers",
        "Intended Audience :: Science/Research",
        "License :: OSI Approved :: BSD License",
        "Operating System :: POSIX :: Linux",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Topic :: Software Development :: Libraries :: Python Modules",
        "Topic :: Scientific/Engineering :: Bio-Informatics",
        "Topic :: Scientific/Engineering :: Information Analysis",
]

packages = [
    { include = "sequana"},
    { include = "sequana/cython"},
    { include = "sequana/enrichment"},
    { include = "sequana/kraken"},
    { include = "sequana/modules_report"},
    { include = "sequana/multiqc"},
    { include = "sequana/plots"},
    { include = "sequana/scripts"},
    { include = "sequana/scripts/main"},
    { include = "sequana/utils"},
    { include = "sequana/viz"},
    { include = "sequana/resources/images"},
]

include = [
    { path = "sequana/resources/images" }
]

[tool.poetry.plugins."multiqc.modules.v1"]
sequana_pacbio_qc = "sequana.multiqc.pacbio_qc:MultiqcModule"
sequana_quality_control = "sequana.multiqc.quality_control:MultiqcModule"
sequana_coverage = "sequana.multiqc.coverage:MultiqcModule"
sequana_isoseq ="sequana.multiqc.isoseq:MultiqcModule"
sequana_isoseq_qc = "sequana.multiqc.isoseq_qc:MultiqcModule"
sequana_bamtools_stats = "sequana.multiqc.bamtools_stats:MultiqcModule"
sequana_laa = "sequana.multiqc.laa:MultiqcModule"
sequana_kraken = "sequana.multiqc.kraken:MultiqcModule"

[tool.poetry.plugins."multiqc.hooks.v1"]
before_config = "sequana.multiqc.config:load_config"

[tool.poetry.plugins."sequana.module"]
sequana_coverage = "sequana.modules_report.coverage:CoverageModule"
sequana_variant_calling = "sequana.modules_report.variant_calling:VariantCallingModule"
sequana_summary = "sequana.modules_report.summary:SummaryModule"

[tool.poetry.scripts]
sequana = "sequana.scripts.main.main:main"
sequana_taxonomy = "sequana.scripts.taxonomy:main"
sequana_coverage = "sequana.scripts.coverage:main"
sequana_substractor = "sequana.scripts.substractor:main"


[project.urls]
Homepage = "https://sequana.readthedocs.io"
Repository = "https://github.com/sequana/sequana"
Issues = "https://github.com/sequana/sequana/issues"
Documentation =  "https://sequana.readthedocs.io"



[tool.poetry.dependencies]
python = "^3.8"
adjusttext = "^0.8"
bioservices = "^1.11.2"
brokenaxes = "^0.5.0"
bx-python = "^0.10.0"
click = "^8.1.7"
colorlog = "^6.8.0"
colormap = "^1.0.6"
cython = "^3.0.7"
deprecated = "^1.2.14"
easydev = "^0.12.1"
gseapy = "^1.1.1"
itolapi = "^4.1.2"
#lxml = "^5.0.0"
matplotlib-venn = "^0.11.9"
multiqc = "<1.18"
plotly = "^5.18.0"
#psutil = "^5.9.7"
#pykwalify = "^1.8.0"
pysam = "^0.22.0"
scikit-learn = "^1.3.2"
scipy = "<1.11.4"
matplotlib = "<3.8.2"
seaborn = "^0.13.1"
selenium = "^4.16.0"
snakemake = "<8"
tqdm = "^4.66.1"
statsmodels = "^0.14.1"
upsetplot = "^0.9.0"
xlrd = "^2.0.1"
vcfpy = "^0.13.6"
rich-click = "^1.7.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-cov = "^4.1.0"
pytest-xdist = "^3.5.0"
pytest-mock = "^3.12.0"
pytest-timeout = "^2.2.0"
pytest-runner = "^6.0.1"
coveralls = "^3.3.1"


[tool.poetry.group.pipelines.dependencies]
sequana-fastqc = "^1.8.1"
sequana-demultiplex = "^1.5.2"
sequana-rnaseq = "^0.19.2"
sequana-denovo = "^0.10.0"
sequana-mapper = "^1.1.0"


[tool.poetry.group.doc.dependencies]
sphinx = ">3"
sphinx-rtd-theme = "^2.0.0"
sphinx-gallery = "^0.15.0"
sequana-sphinxext = "^1.0.0"
#docutils = "^0.20.1"




