[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "sequana"
version = "0.19.2"
description = "A set of standalone application and pipelines dedicated to NGS analysis"
authors = [{name="Thomas Cokelaer", email="<thomas.cokelaer@pasteur.fr>"}]
license = { file = "LICENSE" }
readme = "README.rst"
keywords = ["snakemake", "sequana", "NGS"]
classifiers = [
        "Development Status :: 5 - Production/Stable",
        "Intended Audience :: Education",
        "Intended Audience :: End Users/Desktop",
        "Intended Audience :: Developers",
        "Intended Audience :: Science/Research",
        "License :: OSI Approved :: BSD License",
        "Operating System :: POSIX :: Linux",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.12",
        "Topic :: Software Development :: Libraries :: Python Modules",
        "Topic :: Scientific/Engineering :: Bio-Informatics",
        "Topic :: Scientific/Engineering :: Information Analysis",
]

packages = [
    { include = "sequana"},
    { include = "sequana/cython"},
    { include = "sequana/enrichment"},
    { include = "sequana/kraken"},
    { include = "sequana/modules_report"},
    { include = "sequana/multiqc"},
    { include = "sequana/plots"},
    { include = "sequana/scripts"},
    { include = "sequana/scripts/main"},
    { include = "sequana/utils"},
    { include = "sequana/viz"},
    { include = "sequana/resources/images"},
]

include = [
    { path = "sequana/resources/images" }
]

requires-python = ">=3.10,<4.0"
dependencies = [
    "aiohttp (>=3.11.11,<4.0.0)",
    "adjusttext (>=1.3.0,<2.0.0)",
    "bioservices (>=1.11.2,<2.0.0)",
    "brokenaxes (>=0.6.2,<0.7.0)",
    "bx-python (>=0.13.0,<0.14.0)",
    "click (>=8.1.8,<9.0.0)",
    "colorlog (>=6.9.0)",
    "colormap (>=1.2.0)",
    "cython (>=3.0.11)",
    "deprecated (>=1.2.15)",
    "easydev >=0.12.1",
    "gseapy (>=1.1.4)",
    "itolapi (>=4.1.5)",
    "matplotlib (>3)",
    "numpy (>=2.2.3)",
    "pandas (>=2.2.3)",
    "plotly (>=5.24.1)",
    "pysam (>=0.22.1)",
    "rich-click >=1.7.2",
    "scikit-learn (>=1.6.1)",
    "scipy (>=1.14)",
    "seaborn (>=0.13.2)",
    "selenium (>=4.28.0,<5.0.0)",
    "snakemake (<8)",
    "statsmodels (>=0.14)",
    "tqdm >=4.66.1",
    "upsetplot (>=0.9.0)",
    "xlrd (>=2.0)",
    "vcfpy (>=0.13.8)",
    "multiqc (>=1.18,<=1.27)",
    "pulp (<2.8.0)",
    "kaleido (>=0.1)",
    "natsort (>=8.4.0)",
]


[project.entry-points."multiqc.modules.v1"]
sequana_pacbio_qc = "sequana.multiqc.pacbio_qc:MultiqcModule"
sequana_quality_control = "sequana.multiqc.quality_control:MultiqcModule"
sequana_coverage = "sequana.multiqc.coverage:MultiqcModule"
sequana_isoseq ="sequana.multiqc.isoseq:MultiqcModule"
sequana_isoseq_qc = "sequana.multiqc.isoseq_qc:MultiqcModule"
sequana_bamtools_stats = "sequana.multiqc.bamtools_stats:MultiqcModule"
sequana_laa = "sequana.multiqc.laa:MultiqcModule"
sequana_kraken = "sequana.multiqc.kraken:MultiqcModule"
pairtools = "sequana.multiqc.pairtools:MultiqcModule"


[project.entry-points."multiqc.hooks.v1"]
before_config = "sequana.multiqc.config:load_config"


[project.scripts]
sequana = "sequana.scripts.main.main:main"
sequana_taxonomy = "sequana.scripts.taxonomy:main"
sequana_coverage = "sequana.scripts.coverage:main"


[project.urls]
Homepage = "https://sequana.readthedocs.io"
Repository = "https://github.com/sequana/sequana"
Issues = "https://github.com/sequana/sequana/issues"
Documentation =  "https://sequana.readthedocs.io"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-cov = "^5.0.0"
pytest-xdist = "^3.5.0"
pytest-mock = "^3.12.0"
pytest-timeout = "^2.2.0"
pytest-runner = "^6.0.1"
coveralls = "^3.3.1"


[tool.poetry.group.pipelines.dependencies]
sequana-fastqc = "^1.8.1"
sequana-demultiplex = "^1.5.2"
sequana-rnaseq = "^0.19.2"
sequana-denovo = "^0.10.0"
sequana-mapper = "^1.1.0"


[tool.poetry.group.doc.dependencies]
sphinx = ">3"
sphinx-rtd-theme = "^2.0.0"
sphinx-gallery = "^0.15.0"
sequana-sphinxext = "^1.0.0"

